--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="qolranking">qolranking</string>
     <string name="destination_item_description">Destination item</string>
     <string name="error_dismiss_button">Dismiss</string>
-    <string name="network_error">W00t, something failed</string>
+    <string name="network_error">w00t, something not right</string>
     <string name="network_error_msg">Please check network connection and try again</string>
     <string name="qol_header">Quality of life Index</string>
     <string name="purchasing_power_text">Purchasing Power Index</string>
